<resources>
    <string name="app_name">Profile App</string>
    <string name="_name">Ratih Eldina</string>
    <string name="_myname">RATIH ELDINA</string>
    <string name="_profile_dsc">PROFILE</string>
    <string name="text_profile">PROFILE</string>
    <string name="profile_2">
The first child of two siblings, born 17 years\n ago to be precise on January 6, 2003 in Banjarnegara.Early semester
students of Informatics Engineeringstudy program who are still \n
active and want to always work together wherever they are</string>
    <string name="_achievement">Achievement</string>
    <string name="achievement2">- Peringkat 1 (2017 - 2020)\n
- LKB (2019)\n
- Pertikawan (2019)\n
- Penulis Puisi (2019)\n
- PBB Terbaik (2018)\n
- Best Caption Writer (2017)\n
- KKR (2016)
    </string>
    <string name="_contact">Contact</string>
    <string name="contact2">Phone    :0853-392-7725\n
        Instagram  : Raeldina06


    </string>
    <string name="_education">Education</string>

    <string name="education2">
        SDN 3 Sironnge\n
(2008 - 2014)\n
SMP 4 SATAP Pandanarum\n
(2015 - 2017)\n
SMKN 1 Bawang\n
(2018-2020)\n
IDN\n
(2020-Now)
    </string>
    <string name="_organization">Organization</string>
    <string name="oragnization2">
        Sekretaris Osis\n
(Periode 2016-2017)\n
Redaksi Mading\n
(Periode 2016-2017)\n
Ketua Rohis Akhwat\n
(Periode 2018-2019)\n
Kajian Pramuka\n
(Periode 2018-2019)\n
FORBARA\n
(Sekbid Dakwah)
    </string>
    <string name="_expertise">Expertise</string>
    <string name="expertise2">- Public Speaking\n
- Sewing\n
- Desaigner\n
- Author\n
- Fotografer\n
- Handy Craft\n
    </string>
    <string name="more_photos">More Photos</string>
    <string name="welcome">Welcome</string>
    <string name="_myprofile">To My Profile</string>
    <string name="_next">Next</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="_todoo">TODO</string>
    <string name="_todoooo">TODO</string>
</resources>


