<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dua"
    tools:context=".Cofer_profile">

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_jateng"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/_200dp"
            android:src="@drawable/pramuka_timorleste" />

        <TextView
            android:id="@+id/tv_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sp"
            android:layout_marginTop="@dimen/_230"
            android:background="@color/_black"
            android:drawablePadding="@dimen/_8dp"
            android:gravity="center"
            android:text="@string/more_photos"
            android:textColor="@android:color/white"
            app:drawableStartCompat="@drawable/ic_collection" />
    </FrameLayout>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl_main"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sp"
        android:layout_marginEnd="@dimen/_45sp"
        android:fontFamily="@font/marqez_font"
        android:text="@string/welcome"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/_90sp"
        android:text="@string/_myprofile"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="@dimen/_20sp" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/text2"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_60dp"
        android:background="@drawable/button_next"
        android:text="@string/_next"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</RelativeLayout>



